# rose.nvim

./: .zenodo.json  Build.ps1  CITATION.cff  CMakeLists.txt  Makefile  README.md  build.sh  bundled_build.lua  citation.bib  flake.nix  lazy.lua  renovate.json  renovate.json5  renovate.jsonc  rose.nvim-1.0-1.rockspec
.github/workflows/: fh.yml
crates/rose-repo-map/: Cargo.toml
crates/rose-repo-map/src/: lib.rs
crates/rose-templates/: Cargo.toml
crates/rose-templates/src/: lib.rs
crates/rose-tokenizers/: Cargo.toml
crates/rose-tokenizers/src/: lib.rs
docs/: README.md
lua/: rose_lib.lua
lua/rose/: api.lua  chat_handler.lua  chat_utils.lua  config.lua  file_utils.lua  health.lua  init.lua  logger.lua  menu.lua  pool.lua  queries.lua  response_handler.lua  rose.lua  spinner.lua  state.lua  tokenizers.lua  ui.lua  utils.lua
lua/rose/extensions/: avante.lua  codecompanion.lua  init.lua  lualine.lua  rose.lua  utils.lua
lua/rose/provider/: .luacheckrc  anthropic.lua  gemini.lua  github.lua  groq.lua  hf.lua  init.lua  ollama.lua  openai.lua  perplexity.lua  qompass.lua  xai.lua
lua/rose/providers/: groq.lua  mistral.lua  nvidia.lua  openai.lua
plugin/: rose.lua
scripts/: build.sh
